// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link tests should render styles 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<a
  class="c0"
  href="/foo"
>
  Foo
</a>
`;

exports[`Link tests should render styles in text mode 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<span
  class="c0"
>
  Foo
</span>
`;
